[Init] add cocos project

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,24 @@
-# Prerequisites
-*.d
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+#///////////////////////////
+# Cocos Creator 3D Project
+#///////////////////////////
+library/
+temp/
+local/
+build/
+profiles/
+native
+#//////////////////////////
+# NPM
+#//////////////////////////
+node_modules/
 
-# Precompiled Headers
-*.gch
-*.pch
+#//////////////////////////
+# VSCode
+#//////////////////////////
+.vscode/
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+#//////////////////////////
+# WebStorm
+#//////////////////////////
+.idea/
