--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -1,3 +1,23 @@
 {
-  "__version__": "1.0.6"
+  "__version__": "1.0.6",
+  "sorting-layer": {
+    "layers": [
+      {
+        "id": 0,
+        "name": "default",
+        "value": 0
+      },
+      {
+        "id": 1,
+        "name": "map",
+        "value": 1
+      },
+      {
+        "id": 2,
+        "name": "unit",
+        "value": 2
+      }
+    ],
+    "increaseId": 2
+  }
 }
