[Remake] auto update layers

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -16,8 +16,13 @@
         "id": 2,
         "name": "unit",
         "value": 2
+      },
+      {
+        "id": 3,
+        "name": "ui",
+        "value": 3
       }
     ],
-    "increaseId": 2
+    "increaseId": 3
   }
 }
